# jime

./: CMakeLists.txt  README.md
build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jime.sln  jime.vcxproj  jime.vcxproj.filters  jime_config.vcxproj  jime_config.vcxproj.filters  jime_engine.vcxproj  jime_engine.vcxproj.filters  jime_test.vcxproj  jime_test.vcxproj.filters
build64/Release/: jime.exp  jime.lib  jime_engine.lib
build64/Release/data/: kana.txt
build64/jime.dir/Release/: jime.dll.recipe
build64/jime.dir/Release/jime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build64/jime_config.dir/Release/: jime_config.exe.recipe
build64/jime_config.dir/Release/jime_config.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build64/jime_engine.dir/Release/jime_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
build64/jime_test.dir/Release/: jime_test.exe.recipe
data/: latex_symbols.json
src/config/: jime_config.cpp
src/engine/: engine.cpp  engine.h  test_main.cpp
src/tsf/: DllServer.cpp  TextService.cpp  TextService.h  jime.def
tools/: build_dictionary.py  make_corpus_knp.py  train_nn.py
(+14 files in other folders)
